--- a/package.json
+++ b/package.json
@@ -1,19 +1,64 @@
 {
-  "dependencies": {
-    "electron": "^22.0.1",
-    "electron-cli": "^0.2.8",
-    "node-fetch": "^2.6.7"
-  },
-  "name": "weather-app",
-  "version": "1.0.0",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "Weather App"
+    "dependencies": {
+        "@electron-forge/maker-rpm": "^6.0.4",
+        "electron-squirrel-startup": "^1.0.0",
+        "modules": "^0.4.0",
+        "node": "^19.3.0",
+        "node-fetch": "^2.6.7",
+        "update-electron-app": "^2.0.1"
+    },
+    "name": "youtube-api",
+    "version": "1.0.4",
+    "main": "main.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "electron .",
+        "package": "electron-forge package",
+        "make": "electron-forge make"
+    },
+    "repository": "https://github.com/ankit6823/Weather-App-Using-ElectronJs",
+    "keywords": [
+        "Electron",
+        "quick",
+        "start",
+        "tutorial",
+        "demo"
+    ],
+    "author": "Ankit",
+    "license": "ISC",
+    "description": "Temperature_Finder",
+    "devDependencies": {
+        "@electron-forge/cli": "^6.0.4",
+        "@electron-forge/maker-deb": "^6.0.4",
+        "@electron-forge/maker-squirrel": "^6.0.4",
+        "@electron-forge/maker-zip": "^6.0.4",
+        "electron": "^22.0.2",
+        "electron-builder": "^23.6.0"
+    },
+    "config": {
+        "forge": {
+            "packagerConfig": {},
+            "makers": [{
+                    "name": "@electron-forge/maker-squirrel",
+                    "config": {
+                        "name": "Weather_App"
+                    }
+                },
+                {
+                    "name": "@electron-forge/maker-zip",
+                    "platforms": [
+                        "darwin"
+                    ]
+                },
+                {
+                    "name": "@electron-forge/maker-deb",
+                    "config": {}
+                },
+                {
+                    "name": "@electron-forge/maker-rpm",
+                    "config": {}
+                }
+            ]
+        }
+    }
 }
