--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "node-fetch": "^2.6.7",
         "update-electron-app": "^2.0.1"
     },
-    "name": "youtube-api",
+    "name": "Weather_app",
     "version": "1.0.1",
     "main": "main.js",
     "scripts": {
